# 2Xplat

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
src/commands/: inference.py  train.py
src/configs/: inference.yaml  train_update_dynamic.yaml
src/data/: dl3dv_start_0_distance_50_ctx_6v_tgt_8v.json
src/datasets/: __init__.py  base_dataset.py  batched_sampler.py  dataset.py  dynamic_dataset.py
src/model/: gaussians.py  loss.py  model.py  prope_custom.py
src/model/depth_anything/da_configs/: da3-giant.yaml  da3-large.yaml
src/model/depth_anything/da_model/: __init__.py  cam_enc.py  da3.py  dpt.py  dualdpt.py
src/model/depth_anything/da_model/dinov2/: dinov2.py  vision_transformer.py
src/model/depth_anything/da_utils/: registry.py
src/utils/: camera_utils.py  dataset_utils.py  metric_utils.py
twoxplat/commands/: inference.py  train.py
twoxplat/configs/: api_keys.yaml.example  inference.yaml  train_update_dynamic.yaml
twoxplat/data/: dl3dv_start_0_distance_150_ctx_24v_tgt_8v.json  dl3dv_test.txt  dl3dv_train.txt
twoxplat/datasets/: __init__.py  base_dataset.py  dataset.py  dynamic_dataset.py
twoxplat/model/: dpt_head.py  gaussians.py  loss.py  model.py  prope_custom.py  sh_eval.py  transformer.py
twoxplat/model/depth_anything/da_configs/: da3-giant.yaml  da3-large.yaml
twoxplat/model/depth_anything/da_model/: __init__.py  cam_enc.py  da3.py  dpt.py  dualdpt.py
twoxplat/model/depth_anything/da_utils/: cfg.py  reference_view_selector.py  visualize.py  weight_modify.py
twoxplat/utils/: init_utils.py  training_utils.py
(+3 files in other folders)
